<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/Item_Inicio"
        android:title="@string/Item_Inicio"
        android:icon="@drawable/ic_inicio"
        />
    <item
        android:id="@+id/Item_Chats"
        android:title="@string/Item_Chats"
        android:icon="@drawable/ic_chats"
        />
    <item
        android:id="@+id/Item_Vender"
        android:title="@string/Item_Vender"
        android:enabled="false"
        />
    <item
        android:id="@+id/Item_Servicios"
        android:title="@string/Item_Servicios"
        android:icon="@drawable/ic_servicios"
        />
    <item
        android:id="@+id/Item_Cuenta"
        android:title="@string/Item_Cuenta"
        android:icon="@drawable/ic_cuenta"
        />
</menu>